<resources>
    <string name="app_name">Prometeo</string>
    <!-- Strings related to login -->
    <string name="prompt_email"></string>
    <string name="prompt_password"></string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marco Rodríguez</string>
    <string name="nav_header_subtitle">mrodrise@prometeoplatform.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Real Time Event</string>
    <string name="menu_gallery">Scan Devices</string>
    <string name="menu_slideshow">Logout</string>
    <string name="search">Search</string>
    <string name="textview">Pulse to search</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Prometeo</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="next">Next</string>
    <string name="scan">Scan</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="co">CO</string>
    <string name="no2">NO2</string>
    <string name="_0">0</string>
    <string name="btn_start_message">Send Data</string>

    <string name="logged_in_new_notice">"An identified user logged in for the first time. A new Profile was created on App ID.
Now when he logs in with the same credentials from any device or web client, the app will show his same profile and selections."</string>
    <string name="logged_in_again_notice">"A known identified user logged in again. His Profile is fetched from App ID.</string>
    <string name="new_guest_notice">"A guest user started using the app.
App ID created a new anonymous profile, where the user’s selections can be stored. Note that this anonymous profile is only available from this device."</string>
    <string name="returning_guest_notice">"A guest user returned.
The app uses his existing anonymous profile, so his previous selections are shown. Note that this anonymous user profile is only available from this device."</string>
    <string name="login_back_notice">"An identified user returned to the app with the same identity.
The app accesses his identified profile and the previous selections that he made."</string>
    <string name="login_back_and_change_login_notice">"The user signed back into the device with a different identity (e.g. was with Facebook, now with Google). The profile related to the identity he currenlty logged in with is now shown."</string>
    <string name="please_wait">Please Wait...</string>
    <string name="progressive_auth_notice">"A guest user logged-in for the first time.
App ID assigned this user’s identity to his anonymous profile, so his previous selections are saved. The anonymous token previously used to access this profile is now invalid."</string>
    <string name="switch_to_identified_notice">"A user started to use the app anonymously, made some selections, and then logged in.
Since he had logged in in the past, the app switches over to his existing identified profile in place of his anonymous profile."</string>

    <string name="ConnectionAcceptedMsg1">Service Connection from AccessoryConsumer has been accepted by AccessoryProvider.</string>
    <string name="ConnectionAcceptedMsg2">Service Connection from MessageConsumer has been accepted by MessageProvider.</string>
    <string name="ConnectionTerminateddMsg">Service Connection with AccessoryConsumer has been terminated.</string>
    <string name="ConnectionTerminateddMsg2">Service Connection with MessageConsumer has been terminated.</string>
    <string name="Authenticated">Peer Agent has been authenticated!!!</string>

    <!-- Strings related to test smartwatch -->

    <string name="hello_world">Hello Message!</string>
    <string name="NoPeersFound">No peers have been found!!!</string>
    <string name="buttonFindPeerAgent">Find PeerAgent</string>
    <string name="buttonSend">Send</string>


</resources>