<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul"
    tools:context=".DeviceDashboard">

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="223dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="276dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTemperature"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/temperature"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueTemperature"
                android:layout_width="72dp"
                android:layout_height="36dp"
                android:layout_margin="1dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="219dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/_0"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/humidity"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/valueHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="216dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/_0"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textCO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/co"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/valueCO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="251dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/_0"
                android:textSize="24sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textNO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/no2"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/valueNO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="247dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/_0"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>